2005-02-03 22:43 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLinearProgramUV) added. This is a copy and
	edit of gridSmoothNodeQP to smooth faces using quadratic
	programing.
	
2005-02-03 17:37 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridStoreAllARDerivatives) moved to gridcad
	and renamed.
	* src/gridcad.c (gridStoreVolumeCostDerivatives) moved from
	gridmetric and renamed.
	* src/gridcad.c (gridStoreFaceCostParameterDerivatives) created
	to allow quadradic programming optimization of face nodes.
	
2005-02-03 13:44 Mike Park  <mike.park@nasa.gov>

	* src/grid.c,src/gridmetric.c,src/gridcad.c renamed the stored AR
	routines to stored cost.
	
2005-02-03 13:11 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridStoreAR) renamed from gridAddStoredAR. Also
	added a bunch of missing unit tests that I was to lazy to add when
	this was originally implemented.
	* src/gridmetric.c (gridStoreAllARDerivatives) renamed from
	gridStoreARDerivative.
	* src/gridcad.c (gridSmoothNodeQP) followed rename.
	
2005-02-02 09:25 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (REQUIRED_IMPROVEMENT) made the value very small,
	1.0e-12, so that the maximum possible swaps are allowed. The more
	swaps that take place the better that the edge based scheme does.

2005-02-01 22:35 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (REQUIRED_IMPROVEMENT) added a #define to require
	this minimum improvement to accept swap.

2005-02-01 22:20 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptBasedOnConnRankings) When a new node
	is added by spliting it is positioned to be the correct distance
	from the node with the smallest edge length requirement.

2005-02-01 18:10 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridSwapEdge) does not abort swap if mean ratio
	goes down when gridCostFunction is gridCOST_FCN_EDGE_LENGTH (put
	back it)

2005-02-01 17:55 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridCollapseCost) added logic to set the